--- a/dbzWebsite/api-template/css/style.css
+++ b/dbzWebsite/api-template/css/style.css
@@ -10,6 +10,15 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
+body {
+  background-image: url('../assets/background.jpeg');
+  background-size:cover;
+  border: 1px solid red;
+}
+#logo {
+  border: 1px solid blue;
+  width: 500px;
+}
 img{
   display: block;
   margin: 0 auto;
