--- a/dbzWebsite/api-template/css/style.css
+++ b/dbzWebsite/api-template/css/style.css
@@ -12,14 +12,17 @@
 /*******************************************/
 html {
   height: 100%;
+  background-image: url('../assets/background.jpeg');
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 body {
   height: 100%;
   border: 1px solid red;
 }
 #allContent {
-  background-image: url('../assets/background.jpeg');
-  background-size:cover;
   height: 100%;
 }
 #logo {
