--- a/dbzWebsite/dbzWebsite/css/style.css
+++ b/dbzWebsite/dbzWebsite/css/style.css
@@ -25,24 +25,27 @@ body {
 #allContent {
   height: 100%;
 }
-#charList {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid green;
-}
 #logoContainer {
   display: flex;
   justify-content: center;
 }
+.charListContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid rebeccapurple;
+  position: relative;
+  top: 4vh;
+}
+.characters {
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.75);
+  border: 0;
+}
 #logo {
   border: 1px solid blue;
   width: 400px;
-}
-#imgContainer {
-  width: 50%;
-  height: 200px;
-  border: 1px solid purple;
 }
 .modalAll {
   display: flex;
@@ -51,29 +54,42 @@ body {
   position: relative;
   top: 8vh;
   max-height: 100vh;
-
 }
 .modalContainer {
-  position: fixed;
-  left: 45vw;
   border: 2px solid yellow;
   width: 85vh;
   height: 50vh;
-  background-color: rgba(255, 255, 255, 0.3);;
+  background-color: rgba(255, 255, 255, 0.4);
   border-radius: 20px;
+  position: relative;
+  left: 1vw;
 }
 .modalImage {
   border: 2px solid orange;
   display: flex;
   height:  60vh;
-  object-fit: cover;
+  width: 30vw;
   position: relative;
-  right: 18vw;
+  left: 7vh;
+}
+#imgContainer {
+  width: 50%;
+  height: 200px;
+  border: 1px solid purple;
 }
 #charImg {
+  object-fit: contain;
+  width: 100%;
+  height: auto;
   z-index: 1; 
 }
-
+.item {
+  display: flex;
+  justify-content: space-around;
+}
+/* .hide {
+  display: none;
+} */
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
