--- a/dbzWebsite/dbzWebsite/css/style.css
+++ b/dbzWebsite/dbzWebsite/css/style.css
@@ -120,6 +120,9 @@ h1 {
   margin: 5px 0 0 0;
   letter-spacing: 7px;
 }
+#dragonball {
+  width: 50px;
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
