Make size of photo smaller to make it easier to view

--- a/Portfolio Site/css/style.css
+++ b/Portfolio Site/css/style.css
@@ -11,7 +11,10 @@
 /* LAYOUT
 /*******************************************/
 
-
+#headshot{
+  width: 30vh;
+  object-fit: contain;
+}
 
 /******************************************
 /* ADDITIONAL STYLES
