--- a/Portfolio Site/css/style.css
+++ b/Portfolio Site/css/style.css
@@ -10,6 +10,9 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
+body {
+  font-family: 'gotham';
+}
 header {
   /* border: 2px solid green; */
   width: 100vw;
@@ -45,28 +48,27 @@ nav {
   background-color: rgb(226,	184,	112);
 }
 #leftTop {
-  position: absolute;
-  left: 10vw;
-  bottom: 30vh;
   display: flex;
-  border-radius: 2vh;
-  /* border: 2px solid yellow; */
-  background-color: white;
-  width: 30vw;
-  height: 55vh;
-  box-shadow: 5px 5px 40px black;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 50vw;
+  height: 60vh;  
+  border: 2px solid yellow;
 }
 
 #leftTopContent {
-  padding: 2vh;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content: center; */
+  border-radius: 2vh;
+  border: 2px solid orange;
+  background-color: white;
+  width: 30vw;
+  height: 50vh;
+  box-shadow: 5px 5px 40px black;
+  padding: 2vh;
 }
 .aboutButton {
-  position:relative;
-  top: 25vh;
-  left: 22vw;
   background-color: rgba(238, 167, 171, 1);
   padding: 2vh;
   border-radius: 1vh;
@@ -76,11 +78,16 @@ a {
   color: black;
   text-decoration: none;
 }
-.navLinks {
-
-}
 .navLinks a {
-  font-family: 'gotham';
+  display: flex;
+  justify-content: space-around;
+}
+.goToTop {
+  position: fixed;
+  left: 91vw;
+  bottom: 7vh;
+  width: 50px;
+  height: 50px;
 }
 /******************************************
 /* ADDITIONAL STYLES
