--- a/Portfolio Site/css/style.css
+++ b/Portfolio Site/css/style.css
@@ -84,10 +84,17 @@ a {
 }
 .goToTop {
   position: fixed;
-  left: 91vw;
-  bottom: 7vh;
+  left: 90vw;
+  bottom: 18.5vh;
   width: 50px;
   height: 50px;
+}
+#toTopBtn {
+  font-size: 60px;
+  color: rgba(238, 167, 171, 1);
+  border-radius: 50px;
+  background: black;
+  box-shadow: 0px 0px 10px 1px black;
 }
 /******************************************
 /* ADDITIONAL STYLES
