--- a/Portfolio Site/css/style.css
+++ b/Portfolio Site/css/style.css
@@ -4,6 +4,8 @@
 
 /* Box Model Hack */
 *{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -16,8 +18,70 @@ html {
 body {
   font-family: 'gotham';
 }
-header {
-  /* border: 2px solid green; */
+:root {
+  --primary: rgba(238, 167, 171, 1);
+  --secondary: rgb(104, 211, 230);
+  --dark: rgb(22, 22, 22);
+  --light: rgb(250, 247, 241);
+}
+.navContainer {
+  max-width: 100vw;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  background-color: var(--light);
+  padding: 16px 32px;
+  border-bottom: 3px solid var(--dark);
+}
+.hamburger {
+  display: block;
+  position: relative;
+  z-index: 1;
+  user-select: none;
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+}
+.hamburger span {
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background-color: var(--dark);
+  border-radius: 6px;
+  z-index: 1;
+  transform-origin: 0 0;
+  transition: 0.4s;
+}
+.hamburger:hover span:nth-child(2) {
+  transform: translateX(-10px);
+  background-color: var(--primary);
+}
+.hamburger.isActive span:nth-child(1) {
+  transform: translate(0px, -2px)
+}
+.navLinks, .socialLinks {
+  display: none;
+}
+#logo {
+  font-family: 'wasted';
+  font-size: 5vh;
+  text-decoration: none;
+  color: var(--dark);
+  /* padding-left: 2vw; */
+}
+/* header {
   width: 100vw;
   height: 8vh;
   display: flex;
@@ -35,8 +99,8 @@ nav {
   height: 8vh;
   margin: 0;
   padding: 0;
-}
-#mainTop {
+} */
+/* #mainTop {
   display: flex;
   align-items: center;
   border: 2px solid aqua;
@@ -80,7 +144,7 @@ a {
 .navLinks a {
   display: flex;
   justify-content: space-around;
-}
+} */
 .goToTop {
   position: fixed;
   left: 90vw;
@@ -90,7 +154,7 @@ a {
 }
 #toTopBtn {
   font-size: 60px;
-  color: rgba(238, 167, 171, 1);
+  color: rgb(104, 211, 230);
   border-radius: 50px;
   background: black;
   box-shadow: 0px 0px 5px 1px black;
