--- a/Portfolio Site/css/style.css
+++ b/Portfolio Site/css/style.css
@@ -19,8 +19,9 @@ body {
   font-family: 'gotham';
 }
 :root {
-  --primary: rgba(238, 167, 171, 1);
-  --secondary: rgb(104, 211, 230);
+  --primary: rgba(255, 140, 145, 1);
+  --secondary: rgb(110,	144,	175	);
+  --third: rgba(255, 213, 145);
   --dark: rgb(22, 22, 22);
   --light: rgb(250, 247, 241);
 }
@@ -131,7 +132,7 @@ nav {
   margin: 0;
   padding: 0;
 } */
-/* #mainTop {
+#mainTop {
   display: flex;
   align-items: center;
   border: 2px solid aqua;
@@ -168,7 +169,8 @@ nav {
   border-radius: 1vh;
   box-shadow: 5px 5px 40px black;
 }
-a {
+
+/*a {
   color: black;
   text-decoration: none;
 }
@@ -180,15 +182,19 @@ a {
   position: fixed;
   left: 90vw;
   bottom: 5vh;
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50px;
 }
 #toTopBtn {
   font-size: 60px;
-  color: rgb(104, 211, 230);
+  color: var(--secondary);
   border-radius: 50px;
-  background: black;
+  background: var(--dark);
   box-shadow: 0px 0px 5px 1px black;
+}
+#toTopBtn:hover {
+  background-color: var(--primary);
 }
 /******************************************
 /* ADDITIONAL STYLES
