--- a/Portfolio Site/css/style.css
+++ b/Portfolio Site/css/style.css
@@ -14,6 +14,7 @@
 /*******************************************/
 html {
   scroll-behavior: smooth;
+  background-color: var(--light);
 }
 body {
   font-family: 'gotham';
@@ -23,7 +24,7 @@ body {
   --secondary: rgb(110,	144,	175	);
   --third: rgba(255, 213, 145);
   --dark: rgb(22, 22, 22);
-  --light: rgb(250, 247, 241);
+  --light: rgb(251, 249, 245);
 }
 .navContainer {
   max-width: 100vw;
@@ -40,7 +41,7 @@ nav {
   z-index: 99;
   background-color: var(--light);
   padding: 16px 32px;
-  border-bottom: 3px solid var(--dark);
+  /* border-bottom: 3px solid var(--dark); */
 }
 #logo {
   font-family: 'wasted';
@@ -135,9 +136,9 @@ nav {
 #mainTop {
   display: flex;
   align-items: center;
-  border: 2px solid aqua;
+  /* border: 2px solid aqua; */
   background-image: url('/img/mainMe.jpg');
-  background-position: 0px -50vh;
+  background-position: 0px -45vh;
   width: 100vw;
   height: 90vh;
   background-color: rgb(226,	184,	112);
@@ -149,27 +150,34 @@ nav {
   justify-content: space-around;
   width: 50vw;
   height: 60vh;  
-  border: 2px solid yellow;
+  /* border: 2px solid yellow; */
 }
 
 #leftTopContent {
   display: flex;
   flex-direction: column;
   border-radius: 2vh;
-  border: 2px solid orange;
-  background-color: white;
+  /* border: 2px solid orange; */
+  background-color: var(--light);
   width: 30vw;
   height: 50vh;
-  box-shadow: 5px 5px 40px black;
+  box-shadow: 0px 0px 10px var(--dark);
   padding: 2vh;
 }
-.aboutButton {
-  background-color: rgba(238, 167, 171, 1);
+.resumeButton {
+  background-color: var(--primary);
   padding: 2vh;
   border-radius: 1vh;
-  box-shadow: 5px 5px 40px black;
+  box-shadow: 5px 5px 40px var(--dark);
+  transition: 0.4s;
 }
-
+.resumeButton:hover {
+  background-color: var(--light);
+}
+#leftTop a {
+  text-decoration: none;
+  color: var(--dark);
+}
 /*a {
   color: black;
   text-decoration: none;
@@ -191,10 +199,10 @@ nav {
   color: var(--secondary);
   border-radius: 50px;
   background: var(--dark);
-  box-shadow: 0px 0px 5px 1px black;
+  box-shadow: 0px 0px 5px 1px var(--light);
 }
 #toTopBtn:hover {
-  background-color: var(--primary);
+  background-color: var(--light);
 }
 /******************************************
 /* ADDITIONAL STYLES
