--- a/Portfolio Site/css/style.css
+++ b/Portfolio Site/css/style.css
@@ -27,7 +27,8 @@ body {
   --light: rgb(251, 249, 245);
 }
 .navContainer {
-  max-width: 100vw;
+  max-width: 1280px;
+  /* max-width: 100vw; */
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -116,11 +117,10 @@ nav {
 #mainTop {
   display: flex;
   align-items: center;
-  /* border: 2px solid aqua; */
   background-image: url('/img/mainMe.jpg');
   background-position: 0px -45vh;
   width: 100vw;
-  height: 96vh;
+  height: 93vh;
   background-color: rgb(226,	184,	112);
 }
 #leftTop {
@@ -185,8 +185,33 @@ nav {
   background-color: var(--light);
 }
 .skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid salmon;
   width: 100vw;
-  height: 96vh;
+  height: 93vh;
+}
+.skillsContainer {
+  display: flex;
+  justify-content: space-around;
+  width: 100vw;
+  height: 93vh;
+  border: 2px solid green;
+}
+.skills h2 {
+  font-size: 3rem;
+  margin: 2vh;
+}
+.skills img {
+  border: 2px solid blueviolet;
+  width: 13vw;
+  height: 20vh;
+}
+.projects {
+  width: 100vw;
+  height: 93vh;
+  background-color: var(--secondary); 
 }
 /******************************************
 /* ADDITIONAL STYLES
