--- a/Portfolio Site/css/style.css
+++ b/Portfolio Site/css/style.css
@@ -233,13 +233,17 @@ nav {
   background-color: var(--third); 
 }
 .contact {
+  background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(/img/ticketShot.jpg);
+  background-position: 0px -30vh;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100vw;
   height: 87vh;
-  background-color: var(--light); 
+  /* background-color: var(--light);  */
 }
+
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
