--- a/Portfolio Site/css/style.css
+++ b/Portfolio Site/css/style.css
@@ -135,7 +135,7 @@ nav {
   height: 65vh;
   /* border: 2px solid yellow; */
 }
-#leftTopContent {
+#leftTopContent, .contactContent {
   display: flex;
   flex-direction: column;
   border-radius: 2vh;
@@ -205,7 +205,7 @@ nav {
   height: 65vh;
   /* border: 2px solid green; */
 }
-.skills h2, .portfolio h2, .contact h2 {
+.skills h2, .portfolio h2 {
   font-size: 3rem;
   padding-top: 75px;
 }
@@ -233,17 +233,33 @@ nav {
   background-color: var(--third); 
 }
 .contact {
-  background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(/img/ticketShot.jpg);
-  background-position: 0px -30vh;
-  background-size: cover;
+  background: url(/img/smile.jpg);
+  background-position: 0vw -30vh;
+  background-size: 190vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
+  justify-content: center;
   width: 100vw;
-  height: 87vh;
-  /* background-color: var(--light);  */
+  height: 90vh;
+  padding-right: 11vw;
 }
-
+.contactContent {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: space-around;
+}
+.contact h2 {
+  font-size: 3rem;
+}
+.contact p {
+  font-size: 1.5rem;
+}
+footer {
+  width: 100vw;
+  height: 10vh;
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
