--- a/Portfolio Site/projects/RestaurantWeb/css/style.css
+++ b/Portfolio Site/projects/RestaurantWeb/css/style.css
@@ -70,7 +70,7 @@ nav i {
   float: left;
   width: 100%;
   height: 800px;
-  background-image: url(../../images/fruits-flowers-composition.jpg);
+  background-image: url(../images/fruits-flowers-composition.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -120,7 +120,7 @@ nav i {
   padding-right: 15%;
 }
 .aboutBackground {
-  background-image: url(../../images/tart-desserts.jpg);
+  background-image: url(../images/tart-desserts.jpg);
   float: left;
   width: 100%;
   height: 800px;
@@ -203,7 +203,7 @@ nav i {
   padding: 2%;
 }
 .book {
-  background-image: url(../../images/coffe_background.jpeg);
+  background-image: url(../images/coffe_background.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
 }
