--- a/Portfolio Site/css/style.css
+++ b/Portfolio Site/css/style.css
@@ -18,7 +18,7 @@ html {
 }
 body {
   font-family: 'gotham';
-  margin-top: 65.3px;
+  margin-top: 40.5px;
 }
 :root {
   --primary: rgba(255, 140, 145, 1);
@@ -46,10 +46,11 @@ nav {
   background-color: var(--clear);
   padding: 7px 32px;
   border-bottom: 3px solid var(--dark);
+
 }
 #logo {
-  font-family: 'wasted';
-  font-size: 2.1rem;
+  font-family: 'Gotham', 'sans-serif';
+  font-size: 1.2rem;
   text-decoration: none;
   color: var(--dark);
 }
@@ -101,7 +102,7 @@ nav {
 .navLinks a, .socialLinks a {
   text-decoration: none;
   margin: 0 10px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: var(--dark);
   transition: 0.4s;
 }
@@ -209,7 +210,7 @@ nav {
 }
 .skills h2, .portfolio h2 {
   font-size: 3rem;
-  padding-top: 75px;
+  padding-top: 65px;
 }
 
 .skills img {
@@ -231,8 +232,19 @@ nav {
   flex-direction: column;
   align-items: center;
   width: 100vw;
-  height: 87vh;
-  background-color: var(--third); 
+  height: 90vh;
+  background-color: var(--third);
+}
+.topProjects, .bottomProjects {
+  display: flex;
+  justify-content: space-around;
+  width: 90vw;
+  height: auto;
+  border: 2px solid red;
+}
+.projects video {
+  width: 29vw;
+  height: 32vh;
 }
 .mainContact {
   background: url(/img/smile.jpg);
