--- a/projects/Doggo Directory/css/style.css
+++ b/projects/Doggo Directory/css/style.css
@@ -2,6 +2,8 @@ html {
     font-size: 2rem;
     font-family: 'Franklin Gothic Light', 'Arial Narrow', Arial, sans-serif;
     background: linear-gradient(lightyellow, orange);
+    min-width: 100vw;
+    min-height: 100vh;
 }
 header {
     margin-bottom: 30px;
