--- a/css/style.css
+++ b/css/style.css
@@ -29,15 +29,96 @@ body {
   --clear: rgba(251, 249, 245,.75);
   --clearPrimary: rgba(255, 140, 145, .9);
 }
+@media all and (min-width: 375px){
+  .hamburger {
+    display: none;
+  }
+  .navLinks, .socialLinks {
+    display: flex;
+  }
+  nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 0;
+    background-color: var(--clear);
+    padding: 7px 25px;
+    border-bottom: 3px solid var(--dark);
+  }
+  #mainTop {
+    width: 100vw;
+    height: 85vh;
+    /* padding-top: 44.59px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    /* border: 2px solid red; */
+    background-color: var(--third);
+  }
+  .leftTop {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    /* border: 2px solid green; */
+  }
+  .leftTopContent {
+    height: 39vh;
+    background-color: var(--clear);
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0px 0px 5px var(--dark);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .leftTopContent h1 {
+    margin: 0px 0px 10px 0px;
+  }
+  .leftTopContent span {
+    color: var(--secondary);
+  }
+  .mainImg {
+    width: 80vw;
+    height: 30vh;
+    /* border: 2px solid blue; */
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px var(--dark);
+  }
+  .mainImg img {
+    width: 170vw;
+    object-fit: cover;
+    position: relative;
+    bottom: 15vh;
+    left: -43vw;
+  }
+  .resumeButton {
+    background-color: var(--clearPrimary);
+    color: var(--dark);
+    padding: 1vh;
+    border-radius: 1vh;
+    box-shadow: 0px 0px 10px var(--dark);
+    transition: 0.4s;
+    text-decoration: none;
+  }
+}
+
+
+
 .navContainer {
   max-width: 1280px;
-  /* max-width: 100vw; */
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-nav {
+/* nav {
   position: fixed;
   top: 0;
   left: 0;
@@ -46,8 +127,7 @@ nav {
   background-color: var(--clear);
   padding: 7px 32px;
   border-bottom: 3px solid var(--dark);
-
-}
+} */
 #logo {
   font-family: 'Gotham', 'sans-serif';
   font-size: 1.2rem;
@@ -109,19 +189,13 @@ nav {
 .navLinks a.isActive, .navLinks a:hover, .socialLinks a:hover, footer a:hover, .contactLinks a:hover {
     color: var(--primary);
 }
-@media (min-width: 768px){
-  .hamburger {
-    display: none;
-  }
-  .navLinks, .socialLinks {
-    display: flex;
-  }
-}
-#mainTop {
+
+/* #mainTop {
   display: flex;
   align-items: center;
   background-image: url('/img/mainMe.jpg');
-  background-position: 0px -50vh;
+  background-size: cover;
+  background-position: center;
   width: 100vw;
   height: 87vh;
   background-color: rgb(226,	184,	112);
@@ -133,7 +207,6 @@ nav {
   justify-content: space-around;
   width: 50vw;
   height: 65vh;
-  /* border: 2px solid yellow; */
 }
 #leftTopContent {
   display: flex;
@@ -194,7 +267,6 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* border: 2px solid salmon; */
   width: 100vw;
   height: 87vh;
 }
@@ -206,7 +278,6 @@ nav {
   bottom: 20px;
   width: 60vw;
   height: 65vh;
-  /* border: 2px solid green; */
 }
 .skills h2, .portfolio h2 {
   font-size: 3rem;
@@ -214,7 +285,6 @@ nav {
 }
 
 .skills img {
-  /* border: 2px solid blueviolet; */
   width: 13vw;
   height: 20vh;
   bottom: 50px;
@@ -245,8 +315,6 @@ nav {
 }
 .projects span:hover {
   color: var(--light);
-
-  /* border-bottom: 2px solid var(--primary); */
   transition: .4s;
 }
 .projects {
@@ -277,7 +345,6 @@ nav {
   width: 100vw;
   height: 90vh;
   border: 44.59px solid var(--light);
-  /* padding-right: 11vw; */
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -341,7 +408,7 @@ footer a, .contactLinks a {
 }
 footer span {
   color: var(--secondary);
-}
+} */
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
