--- a/css/style.css
+++ b/css/style.css
@@ -41,12 +41,12 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 0;
+    z-index: 99;
     background-color: var(--clear);
     padding: 7px 25px;
     border-bottom: 3px solid var(--dark);
   }
-  #mainTop {
+  #mainTop, .skills {
     width: 100vw;
     height: 85vh;
     /* padding-top: 44.59px; */
@@ -86,6 +86,7 @@ body {
   .mainImg {
     width: 80vw;
     height: 30vh;
+    z-index: 1;
     /* border: 2px solid blue; */
     overflow: hidden;
     border-radius: 10px;
@@ -106,6 +107,27 @@ body {
     box-shadow: 0px 0px 10px var(--dark);
     transition: 0.4s;
     text-decoration: none;
+  }
+  .skills {
+    background-color: var(--light);
+    height: 60vh;
+  }
+  .skillsInfo {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+  }
+  .skillsImgContainer {
+    width: 100vw;
+    display: flex;
+    justify-content: space-around;
+  }
+  .skillsImgContainer img {
+    width: 30vw;
+  }
+  .skills h2, .portfolio h2 {
+    font-size: 3rem;
+    padding-top: 65px;
   }
 }
 
@@ -129,7 +151,7 @@ body {
   border-bottom: 3px solid var(--dark);
 } */
 #logo {
-  font-family: 'Gotham', 'sans-serif';
+  font-family: 'gotham', 'sans-serif';
   font-size: 1.2rem;
   text-decoration: none;
   color: var(--dark);
