--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
     padding: 7px 25px;
     border-bottom: 3px solid var(--dark);
   }
-  #mainTop, .skills {
+  #mainTop, .skills, .portfolio {
     width: 100vw;
     height: 80vh;
     /* padding-top: 44.59px; */
@@ -112,7 +112,7 @@ body {
     background-color: var(--light);
     height: 60vh;
   }
-  .skillsInfo {
+  .skillsInfo, .projectsContainer {
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -128,6 +128,57 @@ body {
   .skills h2, .portfolio h2 {
     font-size: 3rem;
     padding-top: 65px;
+  }
+  .portfolio {
+
+  }
+  .projectsContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100vw;
+    height: 80vh;
+    padding: 15px;
+    /* border: 2px solid salmon; */
+  }
+  .topProjects, .bottomProjects {
+    width: 45vw;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    /* border: 2px solid teal; */
+  }
+  .projects {
+    width: 30vw;
+    height: 30vh;
+  }
+  .projects video {
+    width: 30vw;
+    height: 10vh;
+    overflow: hidden;
+    object-fit: cover;
+    border: 3px solid var(--dark);
+    border-radius: 20px;
+    opacity: .75;
+  }
+  .projects span {
+    display: block;
+    text-align: center;
+  }
+  .portfolio h2 {
+    padding-bottom: 5vh;
+  }
+  .projects a {
+    text-decoration: none;
+    color: var(--dark);
+  }
+  .projects video:hover {
+    transition: ease-in 0.4s;
+    opacity: 1;
+    box-shadow: 0px 0px 10px 1px var(--light);
   }
 }
 
